--- a/src/main/resources/templates/admin/list_of_users.html
+++ b/src/main/resources/templates/admin/list_of_users.html
@@ -7,8 +7,10 @@
 <body>
     <h2>Список пользователей</h2>
     <br>
+    <a th:href="@{/logout}">Выйти</a>
+    <br>
+    <a th:href="@{/admin/add_user}">Добавить пользователя</a>
 
-    <a th:href="@{/add_user}">Добавить пользователя</a>
     <br>
 
     <table th:border="1">
@@ -18,6 +20,9 @@
             <td><b>Имя</b></td>
             <td><b>Фамилия</b></td>
             <td><b>Возраст</b></td>
+            <td><b>Логин</b></td>
+            <td><b>Роль</b></td>
+            <td><b>Пользователь<br>активирован</b></td>
             <td><b>Действия</b></td>
         </tr>
 
@@ -27,12 +32,15 @@
                 <td th:text = "${user.getFirstName()}"></td>
                 <td th:text = "${user.getLastName()}"></td>
                 <td th:text = "${user.getAge()}"></td>
+                <td th:text = "${user.getLogin()}"></td>
+                <td th:text = "${user.getRoles()}"></td>
+                <td th:text = "${user.isEnabled()}"></td>
                 <td>
-                    <a th:href="@{/show_single_user(id = ${user.getId()})}"> Просмотреть </a>
+                    <a th:href="@{/admin/show_single_user(id = ${user.getId()})}"> Просмотреть </a>
                     &nbsp / &nbsp
-                    <a th:href="@{/edit_user(id=${user.getId()})}"> Редактировать </a>
+                    <a th:href="@{/admin/edit_user(id=${user.getId()})}"> Редактировать </a>
                     &nbsp / &nbsp
-                    <a th:href="@{/delete_user(id=${user.getId()})}"> Удалить </a>
+                    <a th:href="@{/admin/delete_user(id=${user.getId()})}"> Удалить </a>
                 </td>
             </tr>
         </th:block>
